--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "@react-navigation/bottom-tabs": "^7.4.2",
     "@react-navigation/native": "^7.1.14",
     "expo": "~53.0.12",
+    "expo-blur": "^14.1.5",
     "expo-status-bar": "~2.2.3",
     "expo-vector-icons": "^10.0.1",
     "react": "19.0.0",
     "react-native": "0.79.4",
+    "react-native-gesture-handler": "^2.26.0",
+    "react-native-reanimated": "^3.18.0",
     "react-native-safe-area-context": "^5.5.0",
     "react-native-screens": "^4.11.1"
   },
