--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native": "^7.1.14",
     "expo": "~53.0.12",
     "expo-blur": "^14.1.5",
+    "expo-linear-gradient": "^14.1.5",
     "expo-status-bar": "~2.2.3",
     "expo-vector-icons": "^10.0.1",
     "react": "19.0.0",
