--- a/package.json
+++ b/package.json
@@ -16,18 +16,19 @@
     "@react-navigation/stack": "^7.4.2",
     "expo": "53.0.13",
     "expo-blur": "^14.1.5",
+    "expo-camera": "~16.1.9",
+    "expo-image-picker": "~16.1.4",
     "expo-linear-gradient": "^14.1.5",
     "expo-notifications": "~0.31.3",
     "expo-status-bar": "~2.2.3",
     "expo-vector-icons": "^10.0.1",
+    "lottie-react-native": "^7.2.3",
     "react": "19.0.0",
     "react-native": "0.79.4",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "^4.11.1",
-    "expo-camera": "~16.1.9",
-    "expo-image-picker": "~16.1.4"
+    "react-native-screens": "^4.11.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
