--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/bottom-tabs": "^7.4.2",
     "@react-navigation/native": "^7.1.14",
     "@react-navigation/stack": "^7.4.2",
+    "@supabase/supabase-js": "^2.50.2",
     "expo": "53.0.13",
     "expo-blur": "^14.1.5",
     "expo-camera": "~16.1.9",
